added global map

--- a/src/main/templates/countries.hbs
+++ b/src/main/templates/countries.hbs
@@ -13,7 +13,7 @@
           <th scope="col" class="text-center">ISO Alpha 2</th>
           <th scope="col" class="text-center">ISO Alpha 3</th>   
           <th scope="col" class="text-center">Total Site Count</th>
-          <th scope="col" class="text-center">SMPTE Percentage</th>
+          <th scope="col" class="text-center">SMPTE Site %</th>
         </tr>
       </thead>
       <tbody id="searchTable">
