--- a/src/main/templates/regions.hbs
+++ b/src/main/templates/regions.hbs
@@ -12,7 +12,7 @@
           <th scope="col" class="text-center">ISO Alpha 2</th>
           <th scope="col" class="text-center">Total Countries</th>
           <th scope="col" class="text-center">Total Site Count</th>
-          <th scope="col" class="text-center">SMPTE Percentage</th>
+          <th scope="col" class="text-center">SMPTE Site %</th>
         </tr>
       </thead>
       <tbody id="searchTable">
