--- a/src/main/templates/regions.hbs
+++ b/src/main/templates/regions.hbs
@@ -4,7 +4,7 @@
   {{>header}}
 
     <!-- Main content starts - do not edit above this line -->
-    <table class="table table-small table-hover table-bordered">
+    <table id="sorttable" class="table table-small table-hover table-bordered display">
       <thead class="thead-light">
         <tr>
           <th scope="col">Region</th>
