Update countries 02/2021, add validatation

--- a/src/main/templates/partials/footer.hbs
+++ b/src/main/templates/partials/footer.hbs
@@ -1,5 +1,11 @@
-    <small class="text-muted">
-      <p class="text-center">Site Version: <code>{{site_version}}</code></p>
-      <p class="text-center">Generated on {{date}}</p>
-    </small>
+    <footer class="page-footer font-small">
+    <div class="row d-flex align-items-center text-center p-3 border-top">
+      <div class="col text-center">
+        <small class="text-muted">
+          Site version: <code>{{site_version}}</code>
+          <p class="text-center">Generated on {{date}}
+        </small>
+      </div>
+    </div>
+  </footer> 
 </body>
