fix html errors, move navbar align right

--- a/src/main/templates/countries.hbs
+++ b/src/main/templates/countries.hbs
@@ -25,19 +25,19 @@
           <td class="country">
             {{country}}
           </td>
-          <td class="m49" align="center">
+          <td class="m49 text-center">
             <code>{{m49}}</code>
           </td>
-          <td class="isoAlpha2" align="center">
+          <td class="isoAlpha2 text-center">
             <code>{{isoAlpha2}}</code>
           </td>
-          <td class="isoAlpha3" align="center">
+          <td class="isoAlpha3 text-center">
             <code>{{isoAlpha3}}</code>
           </td>
-          <td class="siteCount" align="center">
+          <td class="siteCount text-center">
             {{siteCount}}
           </td>
-          <td class="smpteSite" align="center">
+          <td class="smpteSite text-center">
             {{#if smpteSite}}
               {{smpteSite}}%
             {{/if}}
