--- a/src/main/templates/partials/footer.hbs
+++ b/src/main/templates/partials/footer.hbs
@@ -3,7 +3,7 @@
       <div class="col text-center">
         <small class="text-muted">
           Site version: <code>{{site_version}}</code>
-          <p class="text-center">Generated on {{date}}
+          <br>Generated on <code>{{date}}</code>
         </small>
       </div>
     </div>
